Name:             arrow-xml
Version:          0.0.0
Description:      List arrows for XML manipulation.
Synopsis:         List arrows for XML manipulation.
Category:         Data, Generics
License:          BSD3
License-file:     LICENSE
Author:           Sebastiaan Visser
Maintainer:       haskell@fvisser.nl
Build-Type:       Simple
Cabal-Version:    >= 1.2

Library
  GHC-Options:      -threaded -Wall -O
  HS-Source-Dirs:   src

  Build-Depends:    base ==4.*,
                    arrow-list ==0.0.*,
                    xml ==1.3.*,
                    monads-fd,
                    transformers

  Exposed-modules:  Text.XML.Light.Convert
                    Text.XML.Light.Arrow
