Name:             xml-arrow
Version:          0.2.3
Description:      Haksell list arrows for XML manipulation.
Synopsis:         Haksell list arrows for XML manipulation.
Category:         Data, Generics
License:          BSD3
License-file:     LICENSE
Author:           Sebastiaan Visser
Maintainer:       haskell@fvisser.nl
Build-Type:       Simple
Cabal-Version:    >= 1.6

Library
  GHC-Options:      -Wall
  HS-Source-Dirs:   src

  Build-Depends:    base ==4.*
                  , arrow-list >=0.1 && < 0.6
                  , containers >= 0.3 && < 0.5
                  , xml ==1.3.*

  Exposed-modules:  Text.XML.Light.Arrow

